# cogs

./: .gitignore  CMakeLists.txt  README.org  build-sl7-setup.sh  build-sl7.html  build-sl7.org  cogsConfig.cmake.in  demo.html  demo.org  deps.dot  index.html  index.org  pres.org  wscript
demo/: README.org  avro-schema.jsonnet  avro_nljs.hpp.j2  clean.sh  cogs-demo.cpp  comp-schema.jsonnet  comp.cpp  comp_avro.hpp  comp_nljs.hpp  comp_structs.hpp  demo-avro.jsonnet  demo-codegen.jsonnet  demo-config.json  demo-config.jsonnet  demo-render.jsonnet  factory.cpp  factory.hpp  generate.sh  head-schema.jsonnet  head_avro.hpp  head_nljs.hpp  head_structs.hpp  json-schema.jsonnet  node-schema.jsonnet  node.cpp  node_avro.hpp  node_nljs.hpp  node_structs.hpp  ports.hpp  wscript  wscript_build
inc/cogs/: configurable.hpp  issues.hpp  object.hpp  stream.hpp
pres/: simple-schema.jsonnet
src/: stream.cpp
test/: test_exceptions.cpp  test_logging.cpp  test_nljs_sub.cpp  test_stream.cpp  wscript_build
